Mon Aug 20 20:36:30 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): follow iclasses as klass in cfp
	  but not included modules.  [ruby-core:47241] [Bug #6891]

	* vm_insnhelper.c (vm_call_bmethod): pass defined_class to follow
	  proper ancestors.  [ruby-core:47241] [Bug #6891]

Mon Aug 20 11:40:27 2012  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* common.mk: fix failed to make with -j2.
	  https://gist.github.com/3397935

Mon Aug 20 10:51:01 2012  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb, lib/test/unit/parallel.rb:
	  generate error message (String) in parallel.rb instead of
	  marshalling Exception. Fixes [Bug #6882] [ruby-dev:46054]

Sun Aug 19 01:24:32 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* enum.c: fix docs. https://github.com/ruby/ruby/pull/129 by
	  richardkmichael (Richard Michael).

Sun Aug 19 00:47:26 2012  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/fileutils.rb: fix typo.
	  https://github.com/ruby/ruby/pull/155 by simonc (Simon COURTOIS).

Sat Aug 18 09:57:46 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend: fix inplace-build condition.  enc.mk is generated with
	  setting $srcdir to enc, but pwd is still top build directory.
	  [ruby-core:47236] [Bug #6888]

Fri Aug 17 23:28:54 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_any_to_s, rb_obj_inspect): preserve encodings of class
	  name and instance variable names.

Fri Aug 17 12:39:33 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/lib/dl/func.rb (DL::Function#bind): allow to return/break from
	  the callback method. (Fiddle already allows it.)
	  [Bug #6389] [ruby-dev:45604]

Thu Aug 16 19:54:24 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c, vm_core.h: simplify tracing mechanism.

	  (1) add rb_hook_list_t data structure which includes
	      hooks, events (flag) and `need_clean' flag.
	      If the last flag is true, then clean the hooks list.